Assessment 1/target/generated-sources/antlr4/linguanova/LinguaNovaParser.java
// Generated from LinguaNova.g4 by ANTLR 4.7.1

	package linguanova;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinguaNovaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, POINT=41, COMMA=42, SEMI=43, TILDE=44, SYMBOL=45, 
		COMPARATOR=46, OPERATOR=47, DTYPE=48, LETTER=49, WORD=50, INTEGER=51, 
		DECIMAL=52, NEWBLOCK=53, BLOCKCLS=54, NEWLINE=55, WS=56;
	public static final int
		RULE_prog = 0, RULE_string = 1, RULE_value = 2, RULE_array_length = 3, 
		RULE_lbl = 4, RULE_math_op = 5, RULE_incdec_op = 6, RULE_rtn = 7, RULE_static_assignments = 8, 
		RULE_main_body = 9, RULE_func_body = 10, RULE_func_call = 11, RULE_var_dec = 12, 
		RULE_var_assign = 13, RULE_assignment = 14, RULE_negate_op = 15, RULE_equals_op = 16, 
		RULE_comparison_op = 17, RULE_logic_op = 18, RULE_condition = 19, RULE_output = 20, 
		RULE_input = 21, RULE_do_while = 22, RULE_switchCase = 23, RULE_sCase = 24, 
		RULE_sDefault = 25, RULE_while_loop = 26, RULE_for_loop = 27, RULE_foreach_loop = 28, 
		RULE_if_stmt = 29, RULE_else_stmt = 30, RULE_array_container = 31, RULE_array_items = 32, 
		RULE_single_cmt = 33, RULE_multi_cmt = 34, RULE_statement = 35;
	public static final String[] ruleNames = {
		"prog", "string", "value", "array_length", "lbl", "math_op", "incdec_op", 
		"rtn", "static_assignments", "main_body", "func_body", "func_call", "var_dec", 
		"var_assign", "assignment", "negate_op", "equals_op", "comparison_op", 
		"logic_op", "condition", "output", "input", "do_while", "switchCase", 
		"sCase", "sDefault", "while_loop", "for_loop", "foreach_loop", "if_stmt", 
		"else_stmt", "array_container", "array_items", "single_cmt", "multi_cmt", 
		"statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"'", "'true'", "'false'", "'length'", "'('", "')'", "'inc'", 
		"'dec'", "'return'", "'$'", "'%'", "'$Main init():'", "'#'", "'Func'", 
		"'):'", "'call'", "'<-'", "'negate'", "'equals'", "'and'", "'or'", "'output('", 
		"'input('", "'initiate:'", "'interval('", "'trigger('", "'choice'", "':'", 
		"'standard:'", "'step(#Decimal'", "'/'", "'stepthru(#'", "' in '", "'verify('", 
		"'divert:'", "'<'", "'>'", "'//'", "'/*'", "'*/'", "'.'", "','", "';'", 
		"'~'", null, null, null, null, null, null, null, null, "'\n  '", "'[end]'", 
		"'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "POINT", "COMMA", "SEMI", "TILDE", "SYMBOL", 
		"COMPARATOR", "OPERATOR", "DTYPE", "LETTER", "WORD", "INTEGER", "DECIMAL", 
		"NEWBLOCK", "BLOCKCLS", "NEWLINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinguaNova.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguaNovaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Main_bodyContext main_body() {
			return getRuleContext(Main_bodyContext.class,0);
		}
		public List<Static_assignmentsContext> static_assignments() {
			return getRuleContexts(Static_assignmentsContext.class);
		}
		public Static_assignmentsContext static_assignments(int i) {
			return getRuleContext(Static_assignmentsContext.class,i);
		}
		public List<Func_bodyContext> func_body() {
			return getRuleContexts(Func_bodyContext.class);
		}
		public Func_bodyContext func_body(int i) {
			return getRuleContext(Func_bodyContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(LinguaNovaParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LinguaNovaParser.NEWLINE, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9 || _la==T__10) {
				{
				{
				setState(72);
				static_assignments();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(73);
					match(NEWLINE);
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			main_body();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9 || _la==T__12) {
				{
				{
				setState(85);
				func_body();
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(86);
					match(NEWLINE);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(LinguaNovaParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(LinguaNovaParser.LETTER, i);
		}
		public List<TerminalNode> WORD() { return getTokens(LinguaNovaParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(LinguaNovaParser.WORD, i);
		}
		public List<TerminalNode> INTEGER() { return getTokens(LinguaNovaParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(LinguaNovaParser.INTEGER, i);
		}
		public List<TerminalNode> DECIMAL() { return getTokens(LinguaNovaParser.DECIMAL); }
		public TerminalNode DECIMAL(int i) {
			return getToken(LinguaNovaParser.DECIMAL, i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(LinguaNovaParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(LinguaNovaParser.SYMBOL, i);
		}
		public List<TerminalNode> WS() { return getTokens(LinguaNovaParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LinguaNovaParser.WS, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__0);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << LETTER) | (1L << WORD) | (1L << INTEGER) | (1L << DECIMAL) | (1L << WS))) != 0)) {
				{
				{
				setState(98);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << LETTER) | (1L << WORD) | (1L << INTEGER) | (1L << DECIMAL) | (1L << WS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode DECIMAL() { return getToken(LinguaNovaParser.DECIMAL, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public Array_lengthContext array_length() {
			return getRuleContext(Array_lengthContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Math_opContext math_op() {
			return getRuleContext(Math_opContext.class,0);
		}
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECIMAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(DECIMAL);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				string();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				array_length();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				func_call();
				}
				break;
			case OPERATOR:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				math_op();
				}
				break;
			case LETTER:
			case WORD:
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				lbl();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 7);
				{
				setState(112);
				match(T__1);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 8);
				{
				setState(113);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_lengthContext extends ParserRuleContext {
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public Array_lengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_length; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterArray_length(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitArray_length(this);
		}
	}

	public final Array_lengthContext array_length() throws RecognitionException {
		Array_lengthContext _localctx = new Array_lengthContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_array_length);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__3);
			setState(117);
			match(T__4);
			setState(118);
			lbl();
			setState(119);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LblContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(LinguaNovaParser.LETTER, 0); }
		public TerminalNode WORD() { return getToken(LinguaNovaParser.WORD, 0); }
		public Array_containerContext array_container() {
			return getRuleContext(Array_containerContext.class,0);
		}
		public LblContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lbl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterLbl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitLbl(this);
		}
	}

	public final LblContext lbl() throws RecognitionException {
		LblContext _localctx = new LblContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lbl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !(_la==LETTER || _la==WORD) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__35) {
				{
				setState(122);
				array_container();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_opContext extends ParserRuleContext {
		public TerminalNode OPERATOR() { return getToken(LinguaNovaParser.OPERATOR, 0); }
		public List<LblContext> lbl() {
			return getRuleContexts(LblContext.class);
		}
		public LblContext lbl(int i) {
			return getRuleContext(LblContext.class,i);
		}
		public List<Func_callContext> func_call() {
			return getRuleContexts(Func_callContext.class);
		}
		public Func_callContext func_call(int i) {
			return getRuleContext(Func_callContext.class,i);
		}
		public List<TerminalNode> DECIMAL() { return getTokens(LinguaNovaParser.DECIMAL); }
		public TerminalNode DECIMAL(int i) {
			return getToken(LinguaNovaParser.DECIMAL, i);
		}
		public List<Math_opContext> math_op() {
			return getRuleContexts(Math_opContext.class);
		}
		public Math_opContext math_op(int i) {
			return getRuleContext(Math_opContext.class,i);
		}
		public Math_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterMath_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitMath_op(this);
		}
	}

	public final Math_opContext math_op() throws RecognitionException {
		Math_opContext _localctx = new Math_opContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_math_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(OPERATOR);
			setState(126);
			match(T__4);
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LETTER:
			case WORD:
				{
				setState(127);
				lbl();
				}
				break;
			case T__15:
				{
				setState(128);
				func_call();
				}
				break;
			case DECIMAL:
				{
				setState(129);
				match(DECIMAL);
				}
				break;
			case OPERATOR:
				{
				setState(130);
				math_op();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(133);
			match(COMMA);
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LETTER:
			case WORD:
				{
				setState(134);
				lbl();
				}
				break;
			case T__15:
				{
				setState(135);
				func_call();
				}
				break;
			case DECIMAL:
				{
				setState(136);
				match(DECIMAL);
				}
				break;
			case OPERATOR:
				{
				setState(137);
				math_op();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(140);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Incdec_opContext extends ParserRuleContext {
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public Incdec_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_incdec_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterIncdec_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitIncdec_op(this);
		}
	}

	public final Incdec_opContext incdec_op() throws RecognitionException {
		Incdec_opContext _localctx = new Incdec_opContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_incdec_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !(_la==T__6 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(143);
			match(T__4);
			setState(144);
			lbl();
			setState(145);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RtnContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public RtnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rtn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterRtn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitRtn(this);
		}
	}

	public final RtnContext rtn() throws RecognitionException {
		RtnContext _localctx = new RtnContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rtn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__8);
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(148);
				value();
				}
				break;
			case 2:
				{
				setState(149);
				condition();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Static_assignmentsContext extends ParserRuleContext {
		public TerminalNode DTYPE() { return getToken(LinguaNovaParser.DTYPE, 0); }
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(LinguaNovaParser.SEMI, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Static_assignmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static_assignments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterStatic_assignments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitStatic_assignments(this);
		}
	}

	public final Static_assignmentsContext static_assignments() throws RecognitionException {
		Static_assignmentsContext _localctx = new Static_assignmentsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_static_assignments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(153);
			match(DTYPE);
			setState(154);
			lbl();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(155);
				assignment();
				}
			}

			setState(158);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_bodyContext extends ParserRuleContext {
		public List<TerminalNode> NEWBLOCK() { return getTokens(LinguaNovaParser.NEWBLOCK); }
		public TerminalNode NEWBLOCK(int i) {
			return getToken(LinguaNovaParser.NEWBLOCK, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(LinguaNovaParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LinguaNovaParser.NEWLINE, i);
		}
		public Main_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).enterMain_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguaNovaListener ) ((LinguaNovaListener)listener).exitMain_body(this);
		}
	}

	public final Main_bodyContext main_body() throws RecognitionException {
		Main_bodyContext _localctx = new Main_bodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_main_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__11);
			setState(161);
			match(NEWBLOCK);
			setState(169); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(162);
					statement();
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWBLOCK) {
						{
						{
						setState(163);
						match(NEWBLOCK);
						}
						}
						setState(168);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(171); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(173);
				match(NEWLINE);
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
